--- a/pScan/.cobra.yaml
+++ b/pScan/.cobra.yaml
@@ -9,3 +9,4 @@ license:
     own projects, however the source code may not be used to create training
     material, courses, books, articles, and the like.
     We make no guarantees that this source code is fit for any purpose.
+host-file: newFile.hosts
